syntax = "proto3";

package helloworld.v1;

option go_package = "microservices-template-2024/api/helloworld/v1;v1";
option java_multiple_files = true;
option java_package = "helloworld.v1";
option objc_class_prefix = "APIHelloworldV1";

enum ErrorReason {
  ERR_USER_UNSPECIFIED = 0;
  ERR_USER_NOT_FOUND = 1;
}
